# AgenticBlog-Engine

./: .env.example  .gitignore  LICENSE  README.md  package-lock.json  pyproject.toml  requirements.txt
blogboard/: run.py
blogboard/agents/news_agent/: agent.py  prompts.py
blogboard/agents/tutorial_agent/: agent.py  prompts.py
blogboard/agents/validator_agent/: agent.py  prompts.py
blogboard/config/: settings.py
blogboard/data/: Tracker.xlsx
blogboard/graph/: graph.py  state.py
blogboard/services/: llm.py  prompt_manager.py  storage.py
blogboard/tools/: __init__.py  guardian_search.py  tavily_search.py
blogboard/web/: category.html  index.html  post.html
blogboard/web/blogs/ainews/: articles.json  the-week-in-ai-1.md
blogboard/web/blogs/dl/: articles.json  deep-learning-intro.md
blogboard/web/blogs/ml/: articles.json  machine-learning-basics.md  machine-learning-explained.md
blogboard/web/css/: category.css  home.css  main.css  post.css
blogboard/web/js/: blogs-data.js  category.js  config.js  config.js.example  home.js  post.js
